--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "gulp-istanbul": "^0.10.3",
     "gulp-mocha": "^2.0.0",
     "gulp-plumber": "^1.0.0",
-    "gulp-nsp": "^2.1.0"
+    "gulp-nsp": "^2.1.0",
+    "object-assign": "^4.0.1"
   },
   "eslintConfig": {
     "extends": "xo-space",
